Updating HTML file to show wife cool things to do with bootstrap.

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,9 @@
 		<title>Python Exercises</title>
 	</head>
 	<body>
-	    
-	    <h1>Just a place for experiments</h1>
+	    <div class="container">
+	    	<h1 class="text-center">Just a place for experiments</h1>
+	    </div>
 	    
 	    <script src="/js/jquery.min.js"></script>
 		<script src="/js/bootstrap.min.js"></script>
