--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,21 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<link rel="stylesheet" href="/css/bootstrap.min.css">
 		<title>Python Exercises</title>
+		<script>
+			function loadXMLDoc()
+			{
+				// AJAX Code goes here.
+			}
+		</script>
 	</head>
 	<body>
+
 	    <div class="container">
 	    	<h1 class="text-center">Just a place for experiments</h1>
+	    	<div id="changeDiv">
+	    		<h2>AJAX requests, let's see how this works.</h2>
+	    	</div>
+	    	<button type="button" onclick="loadXMDoc()">Change Content</button>
 	    </div>
 	    
 	    <script src="/js/jquery.min.js"></script>
